--- a/config/config.toml
+++ b/config/config.toml
@@ -4,12 +4,12 @@ Port = 8081
 JwtSecret = "secret"
 
 [Qiniu]
-QINIU_SK=
-QINIU_AK=
-QINIU_BUKET_PATH=
-QINIU_HOST=
-QINIU_UPLOAD_URL=
-QINIU_UPLOAD_DIR=
+QINIU_SK=""
+QINIU_AK=""
+QINIU_BUKET_PATH=""
+QINIU_HOST=""
+QINIU_UPLOAD_URL=""
+QINIU_UPLOAD_DIR=""
 
 [IMRpcService]
 Addr = "127.0.0.1"
